# imgui-learning

./: .gitmessage  CMakeLists.txt  Dockerfile  README.md  imgui-learning.code-workspace
.devcontainer/: devcontainer.json
cmake/: Imgui.cmake
include/: app_context.hpp  app_window.hpp  app_window_registry.hpp
include/apps/: demo_window.hpp  first_window.hpp
include/initializers/: glfw_initializer.hpp  imgui_gl3_initializer.hpp  imgui_glfw_initiaizer.hpp  imgui_initializer.hpp  initializer_base.hpp
source/: app_window.cpp  app_window_registry.cpp  main.cpp
source/apps/: demo_window.cpp  first_window.cpp
